--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Template • Collection</title>
+    <title>LOU KNUDSEN PORTFOLIO 2023</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
